--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "babel": "^5.8.34",
     "babel-eslint": "^4.1.6",
+    "browser-sync": "^2.10.1",
     "del": "^2.1.0",
+    "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-changed": "^1.3.0",
     "gulp-eslint": "^1.1.1",
@@ -40,6 +42,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
+    "jspm": "^0.16.18",
     "object.assign": "^4.0.3",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
