--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "acd-client",
+  "name": "resume",
   "version": "1.0.0",
-  "description": "acd client",
+  "description": "resume",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
