decent versio so far

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "css": "github:systemjs/plugin-css@^0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
-      "semantic-ui": "github:Semantic-Org/Semantic-UI@^2.1.6"
+      "zurb/foundation-sites": "github:zurb/foundation-sites@^6.0.6"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
