--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
       "components/jquery": "github:components/jquery@^2.1.4",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
-      "json": "github:systemjs/plugin-json@^0.1.0",
-      "zurb/foundation-sites": "github:zurb/foundation-sites@^6.0.6"
+      "json": "github:systemjs/plugin-json@^0.1.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
